# datagen

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
conan_test/: conanfile.py  main.cpp
datagen/: CMakeLists.txt
datagen/include/datagen/: boost_random.hpp  buildin.hpp  datagen.hpp  injector.hpp  random.hpp  random_source.hpp  random_source_fwd.hpp  stl_random.hpp  stl_select_random.hpp  value_generation_algorithm.hpp
datagen/include/datagen/internal/: any_type.hpp  braces_construction.hpp  config.hpp  ctor_construction.hpp  explicit_random_invoker.hpp  random_method_selector.hpp
datagen/include/datagen/limits/: builtin_limits.hpp  random_limits.hpp  scoped_limit.hpp  stl_limits.hpp
datagen/include/datagen/limits/detail/: stl_limits_details.hpp
datagen/include/datagen/random_algorithms/: boost_ip_address.hpp  boost_optional.hpp  boost_posix_time.hpp  std_array.hpp  std_map.hpp  std_set.hpp  std_string.hpp  std_vector.hpp
datagen/include/datagen/utils/: any_type.hpp  is_braces_constructible.hpp  is_constructible.hpp
datagen/src/: random_source.cpp
datagen_tests/: CMakeLists.txt  buildin_random_tests.cpp  injector_tests.cpp  main.cpp
datagen_tests/src/: any_type_tests.cpp  boost_random_tests.cpp  braces_contruction_tests.cpp  braces_contruction_tests.cpp.cpp  builtin_limits_tests.cpp  ctor_construction_tests.cpp  explicit_random_invoker_tests.cpp  limit_traits_tests.cpp  main.cpp  random_limits_tests.cpp  random_method_selector_tests.cpp  random_tests.cpp  scoped_limits_tests.cpp  stl_limits_check.cpp  stl_random_tests.cpp  stl_select_random_tests.cpp
test_package/: CMakeLists.txt  conanfile.py  main.cpp
